--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,6 +8,9 @@ jobs:
     name: Build Unity
     runs-on: ubuntu-latest
     steps:
+      - uses: actions/checkout@v3
+        with:
+          lfs: true
       - name: Unity - Builder
         uses: game-ci/unity-builder@v4.2.3
         with:
