--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -8,9 +8,13 @@ jobs:
     name: Build Unity
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v4.1.4
         with:
           lfs: true
+      - uses: actions/cache@v3
+        with:
+          path: Library
+          key: Library-WebGL
       - name: Unity - Builder
         uses: game-ci/unity-builder@v4.2.3
         env:
@@ -20,8 +24,7 @@ jobs:
         with:
           targetPlatform: WebGL
       - name: Upload build
-        uses: actions/upload-artifact@v3
+        uses: actions/upload-artifact@v4.3.3
         with:
-          name: Buildd
+          name: Build-WebGL
           path: build
- 
