--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,7 +1,10 @@
 on:
   push:
-    branches:    
+    branches:
       - main
+
+permissions:
+  pages: write
 
 jobs:
   build:
@@ -15,23 +18,17 @@ jobs:
         with:
           path: Library
           key: Library-WebGL
-      - name: Unity - Builder
-        uses: game-ci/unity-builder@v4.2.3
+      - uses: game-ci/unity-builder@v4.2.3
         env:
           UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
           UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
           UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
         with:
           targetPlatform: WebGL
-      - name: Upload build
-        uses: actions/upload-artifact@v4.3.3
+      - uses: actions/upload-artifact@v4.3.3
         with:
           name: Build-WebGL
           path: build/WebGL/WebGL
-  publish:
-    name: Publish to Pages
-    runs-on: ubuntu-latest
-    steps:
       - uses: actions/deploy-pages@v4.0.5
         with:
           artifact_name: Build-WebGL
