--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,10 +27,7 @@ jobs:
           UNITY_SERIAL: ${{ secrets.UNITY_SERIAL }}
         with:
           targetPlatform: WebGL
-      - uses: actions/upload-artifact@v4.3.3
+      - uses: actions/upload-pages-artifact@v3.0.1
         with:
           name: Build-WebGL
           path: build/WebGL/WebGL
-      - uses: actions/deploy-pages@v4.0.5
-        with:
-          artifact_name: Build-WebGL
