--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,6 +18,12 @@ jobs:
         with:
           path: Library
           key: Library-WebGL
+      - name: Unity - Activate
+        uses: game-ci/unity-activate@v2.0.0
+        env:
+          UNITY_LICENSE: ${{ secrets.UNITY_LICENSE }}
+          UNITY_EMAIL: ${{ secrets.UNITY_EMAIL }}
+          UNITY_PASSWORD: ${{ secrets.UNITY_PASSWORD }}
       - uses: game-ci/unity-builder@v4.2.3
         with:
           targetPlatform: WebGL
